# tree-grepper

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  build.rs  build.sh  m.sh  markup.sh  mask.sh  r  run
.github/workflows/: ci.yml
components/persistence/: Cargo.toml
components/persistence/src/: lib.rs
ex/: marker.rs
ex/marker/: 0.rs.1  13.rs.1  204.rs.1  53.rs.1  75.rs.1
examples/: 1.rs  README.md  error.rs.1  error.rs.1e  error.rs.2  insertion.rs
src/: cli.rs  extractor.rs  extractor_chooser.rs  language.rs  main.rs
tree-grepper-dynamic/: Cargo.toml
tree-grepper-dynamic/src/: extractor.rs  lib.rs
