[package]
name = "tree-marker"
version = "0.1.0"
authors = ["Yijun Yu <y.yu@open.ac.uk>"]
edition = "2021"

[dependencies]
anyhow = "1.0.52"
bump_alloc = "0.1.0"
clap = { version = "3.0.9", features = [ "std", "color", "suggestions", "cargo" ] }
crossbeam = "0.8.1"
ignore = "0.4.18"
itertools = "0.10.3"
rayon = "1.5.1"
serde = { version = "1.0.133", features = [ "derive" ] }
serde_json = "1.0.75"
tree-sitter = "0.20.9"
regex = "1.3.3"
sedregex = "*"
cap = "*"
md5 = "0.7.0"

[dev-dependencies]
insta = "1.10.0"

[build-dependencies]
cc = { version = "1.0.72", features = [ "parallel" ] }
